@@ -2,7 +2,7 @@ package dev.piotrulla.tiktokblock.command;
 
 import dev.piotrulla.tiktokblock.TikTokBlock;
 import dev.piotrulla.tiktokblock.TikTokBlockRepository;
-import dev.piotrulla.tiktokblock.TikTokSettings;
+import dev.piotrulla.tiktokblock.TikTokMessages;
 import dev.piotrulla.tiktokblock.util.ColorUtil;
 import dev.rollczi.litecommands.argument.ArgumentName;
 import dev.rollczi.litecommands.argument.simple.OneArgument;
@@ -11,29 +11,30 @@ import dev.rollczi.litecommands.suggestion.Suggestion;
 import panda.std.Result;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ArgumentName("name")
 public class TikTokBlockArgument implements OneArgument<TikTokBlock> {
 
     private final TikTokBlockRepository repository;
-    private final TikTokSettings settings;
+    private final TikTokMessages messages;
 
-    public TikTokBlockArgument(TikTokBlockRepository repository, TikTokSettings settings) {
+    public TikTokBlockArgument(TikTokBlockRepository repository, TikTokMessages messages) {
         this.repository = repository;
-        this.settings = settings;
+        this.messages = messages;
     }
 
     @Override
     public Result<TikTokBlock, ?> parse(LiteInvocation invocation, String argument) {
         return this.repository.findBlock(argument)
                 .map(Result::ok)
-                .orElseGet(() -> Result.error(ColorUtil.color(this.settings.blockNotExists())));
+                .orElseGet(() -> Result.error(ColorUtil.color(this.messages.blockNotExists())));
     }
 
     @Override
     public List<Suggestion> suggest(LiteInvocation invocation) {
         return this.repository.tikTokBlocksNames().stream()
                 .map(Suggestion::of)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
